api/deployment.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: study-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: study-api
  namespace: study-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: study-api
  template:
    metadata:
      labels:
        app: study-api
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
        - name: study-api
          image: 600359243171.dkr.ecr.ap-northeast-2.amazonaws.com/ghkdtlwns987-test-apiserver
          ports:
            - containerPort: 9000
      imagePullSecrets:
        - name: ap-northeast-2-ecr-registry
