api/sevice.yaml
apiVersion: v1
kind: Service
metadata:
  name: study-api-svc
  namespace: study-api
spec:
  type: ClusterIP
  clusterIP: 10.96.100.34
  selector:
    app: study-api
  ports:
  - port: 9000	# clusterPort
    targetPort: 9000 # targetPort
